fix(govdata): source robustness - 404 skip-fast, 429 retry, data-lag, DQ thresholds
ZipDownloadUtils treats 404/403/410 as non-retryable (unpublished files skip fast); AbstractPatentsTransformer widens the USPTO 429 retry budget (3->8, 60s cap) to ride out rate-limit windows; geo TIGER dataLagYears=1; sec_dq beneficial_ownership floor 5->3; heavy-schema inactivity timeouts (patents/sec_prices/cftc); AlphaVantage URL deprecation fix.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>